--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@heat/test",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "license": "MIT",
   "private": false,
   "repository": {
@@ -18,13 +18,21 @@
     "postpublish": "yarn cleanup",
     "cleanup": "rm *.js"
   },
+  "babel": {
+    "plugins": [
+      "babel-plugin-transform-es2015-modules-commonjs-optimized"
+    ]
+  },
   "dependencies": {
     "aws-sdk": "^2.389.0",
     "dynamo-db-local": "^3.1.1",
     "jest": "^23.6.0",
+    "jest-preset-coffeescript": "^1.0.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-plugin-transform-es2015-modules-commonjs-optimized": "^6.16.0",
     "coffeescript": "^2.3.2"
   }
 }
