--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@heat/test",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "license": "MIT",
   "private": false,
   "repository": {
@@ -19,11 +19,15 @@
   },
   "dependencies": {
     "dynamo-db-local": "^3.2.0",
-    "jest": "^23.6.0",
-    "jest-preset-coffeescript": "^1.0.0",
+    "jest": "^24.7.1",
+    "jest-preset-coffeescript": "^1.0.1",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@heat/npm-coffee-publisher": "^0.1.6"
+  },
+  "peerDependencies": {
+    "aws-sdk": "^2.389.0",
+    "coffeescript": "^2.3.2"
   }
 }
