--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "deploy": "yarn version; ./node_modules/.bin/ncp"
   },
   "dependencies": {
+    "@babel/core": "^7.0.0",
     "dynamo-db-local": "^3.2.0",
     "jest": "^24.7.1",
     "jest-preset-coffeescript": "^1.0.1",
