--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@heat/test",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "license": "MIT",
   "private": false,
   "repository": {
@@ -17,15 +17,24 @@
     "major": "yarn version --major; ./node_modules/.bin/ncp",
     "deploy": "yarn version; ./node_modules/.bin/ncp"
   },
+  "jest": {
+    "preset": "jest-preset-coffeescript",
+    "testEnvironment": "node",
+    "testRegex": "test?/.*\\.(coffee|litcoffee|coffee.md)$"
+  },
   "dependencies": {
     "@babel/core": "^7.0.0",
+    "@heat/step-functions-local": "^0.0.4",
+    "asl-validator": "^1.3.0",
     "dynamo-db-local": "^3.2.0",
-    "jest": "^24.7.1",
+    "jest": "^24.8.0",
     "jest-preset-coffeescript": "^1.0.1",
+    "koa": "^2.7.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@heat/npm-coffee-publisher": "^0.1.6",
+    "aws-sdk": "^2.473.0",
     "coffeescript": "^2.4.1"
   },
   "peerDependencies": {
