--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@heat/test",
-  "version": "0.2.15",
+  "version": "0.2.16",
   "license": "MIT",
   "private": false,
   "repository": {
@@ -29,6 +29,7 @@
     "dynamo-db-local": "^3.2.0",
     "jest": "^24.8.0",
     "jest-preset-coffeescript": "^1.0.1",
+    "json-refs": "^3.0.13",
     "koa": "^2.7.0",
     "yamljs": "^0.3.0"
   },
