--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@heat/test",
-  "version": "0.2.17",
+  "version": "0.2.18",
   "license": "MIT",
   "private": false,
   "repository": {
@@ -31,8 +31,7 @@
     "jest-preset-coffeescript": "^1.0.1",
     "js-yaml": "^3.13.1",
     "json-refs": "^3.0.13",
-    "koa": "^2.7.0",
-    "yamljs": "^0.3.0"
+    "koa": "^2.7.0"
   },
   "devDependencies": {
     "@heat/npm-coffee-publisher": "^0.1.6",
