--- a/package.json
+++ b/package.json
@@ -20,17 +20,19 @@
   "jest": {
     "preset": "jest-preset-coffeescript",
     "testEnvironment": "node",
-    "testRegex": "test?/.*\\.(coffee|litcoffee|coffee.md)$"
+    "rootDir": "./test/",
+    "setupFilesAfterEnv": [
+      "../node_modules/jest-preset-coffeescript/index.js"
+    ]
   },
   "dependencies": {
-    "@babel/core": "^7.0.0",
+    "@babel/core": "^7.5.0",
     "@heat/step-functions-local": "^0.0.6",
     "asl-validator": "^1.3.0",
     "dynamo-db-local": "^3.2.0",
     "jest": "^24.8.0",
-    "jest-preset-coffeescript": "^1.0.1",
+    "jest-preset-coffeescript": "^1.1.0",
     "js-yaml": "^3.13.1",
-    "json-refs": "^3.0.13",
     "koa": "^2.7.0"
   },
   "devDependencies": {
