--- a/package.json
+++ b/package.json
@@ -20,10 +20,7 @@
   "jest": {
     "preset": "jest-preset-coffeescript",
     "testEnvironment": "node",
-    "rootDir": "./test/",
-    "setupFilesAfterEnv": [
-      "../node_modules/jest-preset-coffeescript/index.js"
-    ]
+    "rootDir": "./test/"
   },
   "dependencies": {
     "@babel/core": "^7.5.0",
@@ -31,7 +28,7 @@
     "asl-validator": "^1.3.0",
     "dynamo-db-local": "^3.2.0",
     "jest": "^24.8.0",
-    "jest-preset-coffeescript": "^1.1.0",
+    "jest-preset-coffeescript": "1.0.1",
     "js-yaml": "^3.13.1",
     "koa": "^2.7.0"
   },
