--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@heat/test",
-  "version": "0.2.23",
+  "version": "0.2.24",
   "license": "MIT",
   "private": false,
   "repository": {
@@ -28,7 +28,7 @@
     "asl-validator": "^1.3.0",
     "dynamo-db-local": "^3.2.0",
     "jest": "^24.8.0",
-    "jest-preset-coffeescript": "1.0.1",
+    "jest-preset-coffeescript": "^1.1.1",
     "js-yaml": "^3.13.1",
     "koa": "^2.7.0"
   },
