--- a/aws/step-functions.yml
+++ b/aws/step-functions.yml
@@ -26,7 +26,7 @@ TestStepFunctions:
         Next: SNS
         Resource: arn:aws:states:::sqs:sendMessage
         Parameters:
-          QueueUrl: http://localhost:3002
+          QueueUrl: https://sqs.#{AWS::Region}.amazonaws.com/#{AWS::AccountId}/some_queue
           MessageBody:
             data.$: $
             state.$: $$
