--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@heat/test",
-  "version": "0.2.50",
+  "version": "0.2.51",
   "license": "MIT",
   "private": false,
   "repository": {
@@ -32,7 +32,9 @@
     "jest-preset-coffeescript": "1.1.1",
     "js-yaml": "^3.13.1",
     "koa": "^2.7.0",
-    "proper-lockfile": "^4.1.1"
+    "proper-lockfile": "^4.1.1",
+    "redis": "^3.0.2",
+    "redis-server": "^1.2.2"
   },
   "devDependencies": {
     "@heat/npm-coffee-publisher": "^0.1.6",
