--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@heat/test",
-  "version": "0.2.69",
+  "version": "0.2.70",
   "license": "MIT",
   "private": false,
   "repository": {
@@ -26,6 +26,7 @@
     "@babel/core": "^7.5.0",
     "@heat/step-functions-local": "^0.0.6",
     "asl-validator": "^1.3.0",
+    "cloudformation-js-yaml-schema": "^0.4.2",
     "dynamo-db-local": "^3.2.1",
     "get-port": "^5.0.0",
     "jest": "^24.8.0",
