--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@heat/test",
-  "version": "0.2.72",
+  "version": "0.2.73",
   "license": "MIT",
   "private": false,
   "repository": {
@@ -24,14 +24,13 @@
   },
   "dependencies": {
     "@babel/core": "^7.5.0",
+    "@heat/awsless": "^0.0.410",
     "@heat/step-functions-local": "^0.0.6",
     "asl-validator": "^1.3.0",
-    "cloudformation-js-yaml-schema": "^0.4.2",
     "dynamo-db-local": "^3.2.1",
     "get-port": "^5.0.0",
     "jest": "^24.8.0",
     "jest-preset-coffeescript": "1.1.1",
-    "js-yaml": "^3.13.1",
     "koa": "^2.7.0",
     "proper-lockfile": "^4.1.1",
     "redis": "^3.0.2",
