--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@heat/test",
-  "version": "0.2.98",
+  "version": "0.2.99",
   "license": "MIT",
   "private": false,
   "repository": {
@@ -29,6 +29,7 @@
     "asl-validator": "^1.3.0",
     "dynamo-db-local": "^3.2.1",
     "get-port": "^5.0.0",
+    "js-yaml": "^4.1.0",
     "koa": "^2.7.0",
     "proper-lockfile": "^4.1.1",
     "redis": "^3.0.2",
